--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,17 +3,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Publications</h2>
+                    <h2>Selected Publications</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Murtaza Tamjeed is a software engineer and researcher.</p>
+                    <p>Understanding Disability Services Toward Improving Graduate Student Support</p>
+                    <p>Murtaza Tamjeed, Vinita Tibdewal, Madison Russell, Michael McQuaid, Tae Oh, Kristen Shinohara</p>
+                    <p>The 23rd International ACM SIGACCESS Conference on Computers and Accessibility</p>
                 </div>
+             
+             
+                <!--
                 <div class="col-lg-4">
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
                 </div>
+                -->
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download CV
