--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-lg-4 col-lg-offset-2 text-center">
                     <p>Understanding Disability Services Toward Improving Graduate Student Support</p>
                     <p>Murtaza Tamjeed, Vinita Tibdewal, Madison Russell, Michael McQuaid, Tae Oh, Kristen Shinohara</p>
                     <p>The 23rd International ACM SIGACCESS Conference on Computers and Accessibility</p>
