--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,9 +9,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p>Understanding Disability Services Toward Improving Graduate Student Support</p>
-                    <p>Murtaza Tamjeed, Vinita Tibdewal, Madison Russell, Michael McQuaid, Tae Oh, Kristen Shinohara</p>
-                    <p>The 23rd International ACM SIGACCESS Conference on Computers and Accessibility</p>
+                    <p><h3>Understanding Disability Services Toward Improving Graduate Student Support</h3></p>
+                    <p><u>Murtaza Tamjeed</u>, Vinita Tibdewal, Madison Russell, Michael McQuaid, Tae Oh, Kristen Shinohara</p>
+                    <p><i>The 23rd International ACM SIGACCESS Conference on Computers and Accessibility</i></p>
+                    <br />
+                    <p><h3>Understanding Disability Services Toward Improving Graduate Student Support</h3></p>
+                    <p><u>Murtaza Tamjeed</u>, Vinita Tibdewal, Madison Russell, Michael McQuaid, Tae Oh, Kristen Shinohara</p>
+                    <p><i>The 23rd International ACM SIGACCESS Conference on Computers and Accessibility</i></p>
+                    <br />
                 </div>
              
              
