--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,10 +13,18 @@
                     <p><u>Murtaza Tamjeed</u>, Vinita Tibdewal, Madison Russell, Michael McQuaid, Tae Oh, Kristen Shinohara</p>
                     <p><i>The 23rd International ACM SIGACCESS Conference on Computers and Accessibility</i></p>
                     <br />
-                    <p><h3>Understanding Disability Services Toward Improving Graduate Student Support</h3></p>
-                    <p><u>Murtaza Tamjeed</u>, Vinita Tibdewal, Madison Russell, Michael McQuaid, Tae Oh, Kristen Shinohara</p>
-                    <p><i>The 23rd International ACM SIGACCESS Conference on Computers and Accessibility</i></p>
+                    <p><h3>Finding the Needle in a Haystack: On the Automatic Identification of Accessibility User Reviews</h3></p>
+                    <p><u>Eman Abdullah AlOmar, Wajdi Aljedaani, <u>Murtaza Tamjeed</u>, Mohamed Wiem Mkaouer, Yasmine N. El-Glaly</p>
+                    <p><i>ACM SIGCHI CSCW2022</i></p>
                     <br />
+                    <p><h3>Usability, Accessibility and Social Entanglements in Advanced Tool Use by Vision Impaired Graduate Students</h3></p>
+                    <p><u>Murtaza Tamjeed</u>, Michael McQuaid, Kristen Shinohara</p>
+                    <p><i>ACM SIGCHI CSCW2022</i></p>
+                    <br />
+                    <p><h3>Accessibility in User Reviews for Mobile Apps: An Automated Detection Approach - Master's Thesis</h3></p>
+                    <p><u>Murtaza Tamjeed</u></p>
+                    <p><i><a href="https://scholarworks.rit.edu/theses/10511/">RIT Scholar Works</a></i></p>
+         
                 </div>
              
              
