--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,16 +15,19 @@
                     <br />
                     <p><h3>Finding the Needle in a Haystack: On the Automatic Identification of Accessibility User Reviews</h3></p>
                     <p>Eman Abdullah AlOmar, Wajdi Aljedaani, <u>Murtaza Tamjeed</u>, Mohamed Wiem Mkaouer, Yasmine N. El-Glaly</p>
-                    <p><i>ACM SIGCHI CSCW2022</i></p>
+                    <p><i>In Procedings of the 2021 CHI Conference on Human Factors in Computing Systems 2021</i></p>
                     <br />
                     <p><h3>Usability, Accessibility and Social Entanglements in Advanced Tool Use by Vision Impaired Graduate Students</h3></p>
                     <p><u>Murtaza Tamjeed</u>, Michael McQuaid, Kristen Shinohara</p>
-                    <p><i>ACM SIGCHI CSCW2022</i></p>
+                    <p><i>ACM SIGCHI CSCW2022 -- to appear</i></p>
                     <br />
-                    <p><h3>Accessibility in User Reviews for Mobile Apps: An Automated Detection Approach - Master's Thesis</h3></p>
-                    <p><u>Murtaza Tamjeed</u></p>
-                    <p><i><a href="https://scholarworks.rit.edu/theses/10511/">RIT Scholar Works</a></i></p>
-         
+                    <p><h3>Accessibility in User Reviews for Mobile Apps: An Automated Detection Approach</h3></p>
+                    <p><u>Murtaza Tamjeed's</u>master's thesis</p>
+                    <p color="white"><i><a href="https://scholarworks.rit.edu/theses/10511/">RIT Scholar Works</a></i></p>
+                    <br />
+                    <p><h3>White Paper: Accessible Computing Education in Colleges and Universities</h3></p>
+                    <p><u>Catie Baker et al.</u>master's thesis</p>
+                    <p color="white"><i><a href="https://www.microsoft.com/en-us/research/uploads/prod/2021/01/Accessible-CS-Education-in-Colleges-and-Universities_Making-K12-Ed-Accessible.pdf">Microsoft Fall 2021 Workshop</a></i></p>
                 </div>
              
              
