--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,7 +28,7 @@
                         <a href="#contact">Contact</a>
                     </li>
                         <li class="page-scroll">
-                        <a href="https://www.google.com/">Contact</a>
+                        <a href="https://www.google.com/">CV</a>
                     </li>
                 </ul>
             </div>
