--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,7 +28,7 @@
                         <a href="#contact">Contact</a>
                     </li>
                         <li class="page-scroll">
-                        <a href="Murtaza_Tamjeed_cv.pdf">CV</a>
+                        <a href="Murtaza_Tamjeed_cv.pdf" target=”_blank”>CV</a>
                     </li>
                 </ul>
             </div>
