--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,6 +30,9 @@
                     <li class="page-scroll">
                         <a href="Murtaza_Tamjeed_cv.pdf" target=”_blank”>CV</a>
                     </li>
+                    <li class="page-scroll">
+                        <a href="https://cair.rit.edu/" target=”_blank”>CAIR</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
