--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,11 +22,11 @@
                     <p><i>ACM SIGCHI CSCW2022 -- to appear</i></p>
                     <br />
                     <p><h3>Accessibility in User Reviews for Mobile Apps: An Automated Detection Approach</h3></p>
-                    <p><u>Murtaza Tamjeed's </u> -- master's thesis</p>
-                    <p color="white"><i><a href="https://scholarworks.rit.edu/theses/10511/">RIT Scholar Works</a></i></p>
+                    <p><u>Murtaza Tamjeed</u> -- thesis</p>
+                    <p><i><a href="https://scholarworks.rit.edu/theses/10511/"><font style="color:white">RIT Scholar Works</font></a></i></p>
                     <br />
                     <p><h3>Accessible Computing Education in Colleges and Universities</h3></p>
-                    <p>Catie Baker et al. -- white paper</p>
+                    <p>Catie Baker, Andrew Begel, Matthew Butler, Anat Caspi, Ramy Ghazal, Neal Kingston, Clayton Lewis, Colleen Lewis, Kelly Mack, Irene Mbari-Kirika, Keita Ohshiro, Paige Rodeghero, Kristen Shinohara, Julie Smith, Namrata Srivastava, Kat Steele, Murtaza Tamjeed, John Tang, Adiam Tesfay, Momona Yamagami</p>
                     <p color="white"><i><a href="https://www.microsoft.com/en-us/research/uploads/prod/2021/01/Accessible-CS-Education-in-Colleges-and-Universities_Making-K12-Ed-Accessible.pdf">Microsoft Fall 2021 Workshop</a></i></p>
                 </div>
              
