--- a/_includes/about.html
+++ b/_includes/about.html
@@ -26,7 +26,7 @@
                     <p><i><a href="https://scholarworks.rit.edu/theses/10511/"><font style="color:white">RIT Scholar Works</font></a></i></p>
                     <br />
                     <p><h3>Accessible Computing Education in Colleges and Universities</h3></p>
-                    <p>Catie Baker, Andrew Begel, Matthew Butler, Anat Caspi, Ramy Ghazal, Neal Kingston, Clayton Lewis, Colleen Lewis, Kelly Mack, Irene Mbari-Kirika, Keita Ohshiro, Paige Rodeghero, Kristen Shinohara, Julie Smith, Namrata Srivastava, Kat Steele, Murtaza Tamjeed, John Tang, Adiam Tesfay, Momona Yamagami</p>
+                    <p>Catie Baker, Andrew Begel, Matthew Butler, Anat Caspi, Ramy Ghazal, Neal Kingston, Clayton Lewis, Colleen Lewis, Kelly Mack, Irene Mbari-Kirika, Keita Ohshiro, Paige Rodeghero, Kristen Shinohara, Julie Smith, Namrata Srivastava, Kat Steele, <u>Murtaza Tamjeed</u>, John Tang, Adiam Tesfay, Momona Yamagami</p>
                     <p color="white"><i><a href="https://www.microsoft.com/en-us/research/uploads/prod/2021/01/Accessible-CS-Education-in-Colleges-and-Universities_Making-K12-Ed-Accessible.pdf">Microsoft Fall 2021 Workshop</a></i></p>
                 </div>
              
@@ -37,8 +37,8 @@
                 </div>
                 -->
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download CV
+                    <a href="https://scholar.google.com/citations?user=eGq_1IQAAAAJ&hl=en&oi=ao" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Check my Google Scholar.
                     </a>
                 </div>
             </div>
