--- a/_includes/about.html
+++ b/_includes/about.html
@@ -37,7 +37,7 @@
                 </div>
                 -->
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://scholar.google.com/citations?user=eGq_1IQAAAAJ&hl=en&oi=ao" class="btn btn-lg btn-outline">
+                    <a href="https://scholar.google.com/citations?user=eGq_1IQAAAAJ&hl=en&oi=ao" target="_blank" class="btn btn-lg btn-outline">
                         <i class="fa"></i> Check my Google Scholar
                     </a>
                 </div>
