--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,21 +13,23 @@
                     <p><u>Murtaza Tamjeed</u>, Vinita Tibdewal, Madison Russell, Michael McQuaid, Tae Oh, Kristen Shinohara</p>
                     <p><i>The 23rd International ACM SIGACCESS Conference on Computers and Accessibility</i></p>
                     <br />
-                    <p><h3>Finding the Needle in a Haystack: On the Automatic Identification of Accessibility User Reviews</h3></p>
-                    <p>Eman Abdullah AlOmar, Wajdi Aljedaani, <u>Murtaza Tamjeed</u>, Mohamed Wiem Mkaouer, Yasmine N. El-Glaly</p>
-                    <p><i>In Procedings of the 2021 CHI Conference on Human Factors in Computing Systems 2021</i></p>
-                    <br />
                     <p><h3>Usability, Accessibility and Social Entanglements in Advanced Tool Use by Vision Impaired Graduate Students</h3></p>
                     <p><u>Murtaza Tamjeed</u>, Michael McQuaid, Kristen Shinohara</p>
-                    <p><i>ACM SIGCHI CSCW2022 -- to appear</i></p>
-                    <br />
-                    <p><h3>Accessibility in User Reviews for Mobile Apps: An Automated Detection Approach</h3></p>
-                    <p><u>Murtaza Tamjeed</u> -- thesis</p>
-                    <p><i><a href="https://scholarworks.rit.edu/theses/10511/"><font style="color:white">RIT Scholar Works</font></a></i></p>
+                    <p><i>ACM SIGCHI CSCW2022 -- Under Review</i></p>
                     <br />
                     <p><h3>Accessible Computing Education in Colleges and Universities</h3></p>
                     <p>Catie Baker, Andrew Begel, Matthew Butler, Anat Caspi, Ramy Ghazal, Neal Kingston, Clayton Lewis, Colleen Lewis, Kelly Mack, Irene Mbari-Kirika, Keita Ohshiro, Paige Rodeghero, Kristen Shinohara, Julie Smith, Namrata Srivastava, Kat Steele, <u>Murtaza Tamjeed</u>, John Tang, Adiam Tesfay, Momona Yamagami</p>
                     <p color="white"><i><a href="https://www.microsoft.com/en-us/research/uploads/prod/2021/01/Accessible-CS-Education-in-Colleges-and-Universities_Making-K12-Ed-Accessible.pdf">Microsoft Fall 2021 Workshop</a></i></p>
+                    <br />
+                    <p><h3>Finding the Needle in a Haystack: On the Automatic Identification of Accessibility User Reviews</h3></p>
+                    <p>Eman Abdullah AlOmar, Wajdi Aljedaani, <u>Murtaza Tamjeed</u>, Mohamed Wiem Mkaouer, Yasmine N. El-Glaly</p>
+                    <p><i>In Procedings of the 2021 CHI Conference on Human Factors in Computing Systems 2021</i></p>
+                    <br />
+                    <p><h3><a href="https://scholarworks.rit.edu/theses/10511/"><font style="color:white">Accessibility in User Reviews for Mobile Apps: An Automated Detection Approach</a></h3></p>
+                    <p><u>Murtaza Tamjeed</u> -- Thesis</p>
+                    <p><i><a href="https://scholarworks.rit.edu/theses/10511/"><font style="color:white">RIT Scholar Works</font></a></i></p>
+                    <br />
+                    
                 </div>
              
              
