--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,23 +9,23 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p><h3><a href="https://dl.acm.org/doi/abs/10.1145/3441852.3471231" target="_blank"><font style="color:white">Understanding Disability Services Toward Improving Graduate Student Support</a></h3></p>
+                    <p><h3><a href="https://dl.acm.org/doi/abs/10.1145/3441852.3471231" target="_blank"><font style="color:white">Understanding Disability Services Toward Improving Graduate Student Support</font></a></h3></p>
                     <p><u>Murtaza Tamjeed</u>, Vinita Tibdewal, Madison Russell, Michael McQuaid, Tae Oh, Kristen Shinohara</p>
                     <p><i>The 23rd International ACM SIGACCESS Conference on Computers and Accessibility</i></p>
                     <br />
-                    <p><h3><font style="color:white">Usability, Accessibility and Social Entanglements in Advanced Tool Use by Vision Impaired Graduate Students</h3></p>
+                    <p><h3><font style="color:white">Usability, Accessibility and Social Entanglements in Advanced Tool Use by Vision Impaired Graduate Students</font></h3></p>
                     <p><u>Murtaza Tamjeed</u>, Michael McQuaid, Kristen Shinohara</p>
                     <p><i>ACM SIGCHI CSCW2022 -- Under Review</i></p>
                     <br />
-                    <p><h3><a href="https://www.microsoft.com/en-us/research/uploads/prod/2021/01/Accessible-CS-Education-in-Colleges-and-Universities_Making-K12-Ed-Accessible.pdf" target="_blank"><font style="color:white">Accessible Computing Education in Colleges and Universities</a></h3></p>
+                    <p><h3><a href="https://www.microsoft.com/en-us/research/uploads/prod/2021/01/Accessible-CS-Education-in-Colleges-and-Universities_Making-K12-Ed-Accessible.pdf" target="_blank"><font style="color:white">Accessible Computing Education in Colleges and Universities</font></a></h3></p>
                     <p>Catie Baker, Andrew Begel, Matthew Butler, Anat Caspi, Ramy Ghazal, Neal Kingston, Clayton Lewis, Colleen Lewis, Kelly Mack, Irene Mbari-Kirika, Keita Ohshiro, Paige Rodeghero, Kristen Shinohara, Julie Smith, Namrata Srivastava, Kat Steele, <u>Murtaza Tamjeed</u>, John Tang, Adiam Tesfay, Momona Yamagami</p>
                     <p><i>Microsoft Fall 2021 Workshop</i></p>
                     <br />
-                    <p><h3><a href="https://dl.acm.org/doi/abs/10.1145/3411764.3445281" target="_blank"><font style="color:white">Finding the Needle in a Haystack: On the Automatic Identification of Accessibility User Reviews</a></h3></p>
+                    <p><h3><a href="https://dl.acm.org/doi/abs/10.1145/3411764.3445281" target="_blank"><font style="color:white">Finding the Needle in a Haystack: On the Automatic Identification of Accessibility User Reviews</font></a></h3></p>
                     <p>Eman Abdullah AlOmar, Wajdi Aljedaani, <u>Murtaza Tamjeed</u>, Mohamed Wiem Mkaouer, Yasmine N. El-Glaly</p>
                     <p><i>In Procedings of the 2021 CHI Conference on Human Factors in Computing Systems 2021</i></p>
                     <br />
-                    <p><h3><a href="https://scholarworks.rit.edu/theses/10511/" target="_blank"><font style="color:white">Accessibility in User Reviews for Mobile Apps: An Automated Detection Approach</a></h3></p>
+                    <p><h3><a href="https://scholarworks.rit.edu/theses/10511/" target="_blank"><font style="color:white">Accessibility in User Reviews for Mobile Apps: An Automated Detection Approach</font></a></h3></p>
                     <p><u>Murtaza Tamjeed</u> -- Thesis</p>
                     <p><i>Rochester Institute of Technology Scholar Works</a></i></p>
                     <br />
