--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,8 +14,8 @@
                     <p><i>The 23rd International ACM SIGACCESS Conference on Computers and Accessibility</i></p>
                     <br />
                     <p><h3><font style="color:white">Usability, Accessibility and Social Entanglements in Advanced Tool Use by Vision Impaired Graduate Students</font></h3></p>
-                    <p><u>Murtaza Tamjeed</u>, Michael McQuaid, Kristen Shinohara</p>
-                    <p><i>ACM SIGCHI CSCW2022 -- Under Review</i></p>
+                    <p>Kristen Shinohar, <u>Murtaza Tamjeed</u>, Michael McQuaid, Dymen Barkins</p>
+                    <p><i>ACM SIGCHI CSCW2022 -- To Appear</i></p>
                     <br />
                     <p><h3><a href="https://www.microsoft.com/en-us/research/uploads/prod/2021/01/Accessible-CS-Education-in-Colleges-and-Universities_Making-K12-Ed-Accessible.pdf" target="_blank"><font style="color:white">Accessible Computing Education in Colleges and Universities</font></a></h3></p>
                     <p>Catie Baker, Andrew Begel, Matthew Butler, Anat Caspi, Ramy Ghazal, Neal Kingston, Clayton Lewis, Colleen Lewis, Kelly Mack, Irene Mbari-Kirika, Keita Ohshiro, Paige Rodeghero, Kristen Shinohara, Julie Smith, Namrata Srivastava, Kat Steele, <u>Murtaza Tamjeed</u>, John Tang, Adiam Tesfay, Momona Yamagami</p>
