--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,7 +13,7 @@
                     <p><u>Murtaza Tamjeed</u>, Vinita Tibdewal, Madison Russell, Michael McQuaid, Tae Oh, Kristen Shinohara</p>
                     <p><i>The 23rd International ACM SIGACCESS Conference on Computers and Accessibility</i></p>
                     <br />
-                    <p><h3><a href="https://doi.org/10.1145/3555609" target="_blank"><font style="color:white">Usability, Accessibility and Social Entanglements in Advanced Tool Use by Vision Impaired Graduate Students</font></h3></p>
+                    <p><h3><a href="https://doi.org/10.1145/3555609" target="_blank"><font style="color:white">Usability, Accessibility and Social Entanglements in Advanced Tool Use by Vision Impaired Graduate Students</font></a></h3></p>
                     <p>Kristen Shinohar, <u>Murtaza Tamjeed</u>, Michael McQuaid, Dymen Barkins</p>
                     <p><i>ACM SIGCHI CSCW2022 -- To Appear</i></p>
                     <br />
