--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,20 +19,22 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Projects</a>
+                        <a href="#portfolio">Design</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Publications</a>
+                        <a href="#about">Research</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="Murtaza_Tamjeed_cv.pdf" target=”_blank”>CV</a>
+                        <a href="Murtaza_Tamjeed_cv.pdf" target=”_blank”>Resume</a>
+                    <!--
                     </li>
                     <li class="page-scroll">
                         <a href="https://cair.rit.edu/" target=”_blank”>CAIR</a>
                     </li>
+                    -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
