--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
- <!-- About (now Publication) Section -->
+ <!-- About (now Research) Section -->
     <section class="success" id="about">
         <div class="container">
             <div class="row">
