--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -4,7 +4,7 @@
         <div class="container portfolio-flex-grid">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Projects</h2>
+                    <h2>Design for Accessibility and Inclusion</h2>
                     <hr class="star-primary">
                 </div>
             </div>
