--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Design for Accessibility and Inclusion</h2>
-                    <p color="Red">Under construction...</p>
+                    <p style="color: red;">Under construction....</p>
                     <hr class="star-primary">
                 </div>
             </div>
