--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -4,7 +4,7 @@
         <div class="container portfolio-flex-grid">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Design for Accessibility and Inclusion</h2>
+                    <h2>Inclusive Design</h2>
                     <p style="color: red;">Under construction....</p>
                     <hr class="star-primary">
                 </div>
